feature(booking): View all bookings Complete API endpoint for viewing all bookings [Finishes #167152510]
